--- a/src/html/_head.htm
+++ b/src/html/_head.htm
@@ -1,10 +1,11 @@
- <head>
+<head>
 	<title>@@title</title>
-	<meta charset="UTF-8">
-	<meta name="format-detection" content="telephone=no">
+	<meta charset="UTF-8" />
+	<meta name="format-detection" content="telephone=no" />
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css">
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="stylesheet" href="css/style.min.css" />
+	<link rel="shortcut icon" href="favicon.ico" />
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script src="https://api-maps.yandex.ru/2.1/?apikey=a1d0b144-aedf-4529-89e3-f0e12c205da0&lang=ru_RU" type="text/javascript"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
